<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splashfragments.SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/signin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginVertical="60dp"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signin_edit_email"/>

    <EditText
        android:id="@+id/signin_edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_email"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="@+id/signin_title"
        app:layout_constraintStart_toStartOf="@+id/signin_title"
        app:layout_constraintTop_toBottomOf="@+id/signin_title"
        app:layout_constraintBottom_toTopOf="@id/signin_edit_password"/>

    <EditText
        android:id="@+id/signin_edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_password"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="@+id/signin_title"
        app:layout_constraintStart_toStartOf="@+id/signin_title"
        app:layout_constraintTop_toBottomOf="@+id/signin_edit_email"
        app:layout_constraintBottom_toTopOf="@id/signin_sign_in_btn"/>

    <Button
        android:id="@+id/signin_sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="35dp"
        android:paddingVertical="20dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_edit_password" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/signin_swt_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/remember_me"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/signin_sign_in_btn"
        app:layout_constraintEnd_toEndOf="@+id/signin_edit_password"
        app:layout_constraintStart_toEndOf="@+id/signin_sign_in_btn"
        app:layout_constraintTop_toBottomOf="@id/signin_edit_password" />

</androidx.constraintlayout.widget.ConstraintLayout>